--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,7 +35,8 @@
     "@angular/platform-browser-dynamic": "6.0.1",
     "@angular/router": "6.0.1",
     "@ngrx/effects": "5.2.0",
-    "@ngrx/router-store": "5.2.0",
+    "@ngrx/entity": "5.2.0",
+    "@ngrx/router-store": "^6.0.1",
     "@ngrx/store": "5.2.0",
     "@ngrx/store-devtools": "5.2.0",
     "@nrwl/nx": "6.1.0",
@@ -59,6 +60,7 @@
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
+    "@types/node-hue-api": "^2.3.0",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-marbles": "0.3.1",
@@ -69,6 +71,7 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "ng-packagr": "^3.0.0-rc.2",
+    "ngrx-store-localstorage": "^5.0.1",
     "prettier": "1.10.2",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
