--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,7 +35,7 @@
     "@angular/platform-browser-dynamic": "6.0.1",
     "@angular/router": "6.0.1",
     "@ngrx/effects": "5.2.0",
-    "@ngrx/entity": "5.2.0",
+    "@ngrx/entity": "^6.1.0",
     "@ngrx/router-store": "^6.0.1",
     "@ngrx/store": "5.2.0",
     "@ngrx/store-devtools": "5.2.0",
