--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,10 +26,10 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "6.0.1",
     "@angular/common": "6.0.1",
-    "@angular/compiler": "6.0.1",
     "@angular/core": "6.0.1",
+    "@angular/compiler": "6.0.1",
+    "@angular/animations": "6.0.1",
     "@angular/forms": "6.0.1",
     "@angular/platform-browser": "6.0.1",
     "@angular/platform-browser-dynamic": "6.0.1",
@@ -47,11 +47,15 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.1",
+    "@angular/compiler-cli": "6.0.1",
     "@angular-devkit/build-ng-packagr": "~0.6.1",
+    "@angular-devkit/build-angular": "~0.6.1",
+    "ng-packagr": "^3.0.0-rc.2",
+    "tsickle": ">=0.25.5",
+    "tslib": "^1.7.1",
+    "typescript": "2.7.2",
     "@angular/cdk": "^6.4.0",
     "@angular/cli": "6.0.1",
-    "@angular/compiler-cli": "6.0.1",
     "@angular/flex-layout": "^6.0.0-beta.16",
     "@angular/language-service": "6.0.1",
     "@angular/material": "^6.4.0",
@@ -70,14 +74,10 @@
     "karma-coverage-istanbul-reporter": "~1.4.2",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "ng-packagr": "^3.0.0-rc.2",
     "ngrx-store-localstorage": "^5.0.1",
     "prettier": "1.10.2",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
-    "tsickle": ">=0.25.5",
-    "tslib": "^1.7.1",
-    "tslint": "~5.9.1",
-    "typescript": "2.7.2"
+    "tslint": "~5.9.1"
   }
 }
