--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,44 +26,40 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "6.0.1",
-    "@angular/core": "6.0.1",
-    "@angular/compiler": "6.0.1",
-    "@angular/animations": "6.0.1",
-    "@angular/forms": "6.0.1",
-    "@angular/platform-browser": "6.0.1",
-    "@angular/platform-browser-dynamic": "6.0.1",
-    "@angular/router": "6.0.1",
-    "@ngrx/effects": "5.2.0",
+    "@angular/animations": "6.1.4",
+    "@angular/common": "6.1.4",
+    "@angular/compiler": "6.1.4",
+    "@angular/core": "6.1.4",
+    "@angular/forms": "6.1.4",
+    "@angular/platform-browser": "6.1.4",
+    "@angular/platform-browser-dynamic": "6.1.4",
+    "@angular/router": "6.1.4",
+    "@ngrx/effects": "6.1.0",
     "@ngrx/entity": "^6.1.0",
-    "@ngrx/router-store": "^6.0.1",
-    "@ngrx/store": "5.2.0",
-    "@ngrx/store-devtools": "5.2.0",
-    "@nrwl/nx": "6.1.0",
+    "@ngrx/router-store": "^6.1.0",
+    "@ngrx/store": "6.1.0",
+    "@ngrx/store-devtools": "6.1.0",
+    "@nrwl/nx": "6.2.1",
     "core-js": "^2.5.4",
-    "ngrx-store-freeze": "0.2.2",
-    "rxjs": "6.0.0",
-    "rxjs-compat": "6.0.0",
+    "ngrx-store-freeze": "0.2.4",
+    "rxjs": "6.2.2",
+    "rxjs-compat": "6.2.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "6.0.1",
-    "@angular-devkit/build-ng-packagr": "~0.6.1",
     "@angular-devkit/build-angular": "~0.6.1",
-    "ng-packagr": "^3.0.0-rc.2",
-    "tsickle": ">=0.25.5",
-    "tslib": "^1.7.1",
-    "typescript": "2.7.2",
-    "@angular/cdk": "^6.4.0",
-    "@angular/cli": "6.0.1",
-    "@angular/flex-layout": "^6.0.0-beta.16",
-    "@angular/language-service": "6.0.1",
-    "@angular/material": "^6.4.0",
-    "@ngrx/schematics": "5.2.0",
-    "@nrwl/schematics": "6.1.0",
+    "@angular-devkit/build-ng-packagr": "~0.6.1",
+    "@angular/cdk": "^6.4.6",
+    "@angular/cli": "6.1.5",
+    "@angular/compiler-cli": "6.1.4",
+    "@angular/flex-layout": "^6.0.0-beta.17",
+    "@angular/language-service": "6.1.4",
+    "@angular/material": "^6.4.6",
+    "@ngrx/schematics": "6.1.0",
+    "@nrwl/schematics": "6.2.1",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/node": "~10.9.2",
     "@types/node-hue-api": "^2.3.0",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
@@ -74,10 +70,14 @@
     "karma-coverage-istanbul-reporter": "~1.4.2",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "ng-packagr": "^3.0.0-rc.2",
     "ngrx-store-localstorage": "^5.0.1",
     "prettier": "1.10.2",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "tsickle": ">=0.25.5",
+    "tslib": "^1.7.1",
+    "tslint": "~5.9.1",
+    "typescript": "2.7.2"
   }
 }
