--- a/frontend/package.json
+++ b/frontend/package.json
@@ -62,6 +62,7 @@
     "@types/node": "~10.9.2",
     "@types/node-hue-api": "^2.3.0",
     "codelyzer": "~4.2.1",
+    "hammerjs": "^2.0.8",
     "jasmine-core": "~2.99.1",
     "jasmine-marbles": "0.3.1",
     "jasmine-spec-reporter": "~4.2.1",
