--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
@@ -14,12 +15,14 @@
     "@neoskop/nem": "^0.5.4",
     "@neoskop/phantom": "^1.1.0",
     "body-parser": "^1.18.3",
+    "fs-extra": "^7.0.0",
     "http-proxy-middleware": "^0.18.0",
     "node-hue-api": "^2.4.2"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
     "@types/express": "^4.16.0",
+    "@types/fs-extra": "^5.0.4",
     "@types/http-proxy-middleware": "^0.17.5",
     "@types/node-hue-api": "^2.3.0",
     "typescript": "^2.9.2"
