--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,84 +1,85 @@
 {
-  "name": "frontend",
-  "version": "0.0.0",
-  "license": "MIT",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "./node_modules/.bin/nx lint && ng lint",
-    "e2e": "ng e2e",
-    "affected:apps": "./node_modules/.bin/nx affected:apps",
-    "affected:build": "./node_modules/.bin/nx affected:build",
-    "affected:e2e": "./node_modules/.bin/nx affected:e2e",
-    "affected:test": "./node_modules/.bin/nx affected:test",
-    "affected:lint": "./node_modules/.bin/nx affected:lint",
-    "affected:dep-graph": "./node_modules/.bin/nx affected:dep-graph",
-    "format": "./node_modules/.bin/nx format:write",
-    "format:write": "./node_modules/.bin/nx format:write",
-    "format:check": "./node_modules/.bin/nx format:check",
-    "update": "ng update @nrwl/schematics",
-    "update:check": "ng update",
-    "workspace-schematic": "./node_modules/.bin/nx workspace-schematic",
-    "dep-graph": "./node_modules/.bin/nx dep-graph",
-    "help": "./node_modules/.bin/nx help"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "6.1.4",
-    "@angular/common": "6.1.4",
-    "@angular/compiler": "6.1.4",
-    "@angular/core": "6.1.4",
-    "@angular/forms": "6.1.4",
-    "@angular/platform-browser": "6.1.4",
-    "@angular/platform-browser-dynamic": "6.1.4",
-    "@angular/router": "6.1.4",
-    "@ngrx/effects": "6.1.0",
-    "@ngrx/entity": "^6.1.0",
-    "@ngrx/router-store": "^6.1.0",
-    "@ngrx/store": "6.1.0",
-    "@ngrx/store-devtools": "6.1.0",
-    "@nrwl/nx": "6.2.1",
-    "core-js": "^2.5.4",
-    "ngrx-store-freeze": "0.2.4",
-    "rxjs": "6.2.2",
-    "rxjs-compat": "6.2.2",
-    "zone.js": "^0.8.26"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.1",
-    "@angular-devkit/build-ng-packagr": "~0.6.1",
-    "@angular/cdk": "^6.4.6",
-    "@angular/cli": "6.1.5",
-    "@angular/compiler-cli": "6.1.4",
-    "@angular/flex-layout": "^6.0.0-beta.17",
-    "@angular/language-service": "6.1.4",
-    "@angular/material": "^6.4.6",
-    "@ngrx/schematics": "6.1.0",
-    "@nrwl/schematics": "6.2.1",
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~10.9.2",
-    "@types/node-hue-api": "^2.3.0",
-    "codelyzer": "~4.2.1",
-    "hammerjs": "^2.0.8",
-    "jasmine-core": "~2.99.1",
-    "jasmine-marbles": "0.3.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~1.4.2",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "ng-packagr": "^3.0.0-rc.2",
-    "ngrx-store-localstorage": "^5.0.1",
-    "prettier": "1.10.2",
-    "protractor": "~5.3.0",
-    "ts-node": "~5.0.1",
-    "tsickle": ">=0.25.5",
-    "tslib": "^1.7.1",
-    "tslint": "~5.9.1",
-    "typescript": "2.7.2"
-  }
+    "name": "frontend",
+    "version": "0.0.0",
+    "license": "MIT",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "build": "ng build",
+        "test": "ng test",
+        "lint": "./node_modules/.bin/nx lint && ng lint",
+        "e2e": "ng e2e",
+        "xi18n": "ng xi18n --output-path locale --i18n-locale en --i18n-format xmb --out-file messages.xmb ",
+        "affected:apps": "./node_modules/.bin/nx affected:apps",
+        "affected:build": "./node_modules/.bin/nx affected:build",
+        "affected:e2e": "./node_modules/.bin/nx affected:e2e",
+        "affected:test": "./node_modules/.bin/nx affected:test",
+        "affected:lint": "./node_modules/.bin/nx affected:lint",
+        "affected:dep-graph": "./node_modules/.bin/nx affected:dep-graph",
+        "format": "./node_modules/.bin/nx format:write",
+        "format:write": "./node_modules/.bin/nx format:write",
+        "format:check": "./node_modules/.bin/nx format:check",
+        "update": "ng update @nrwl/schematics",
+        "update:check": "ng update",
+        "workspace-schematic": "./node_modules/.bin/nx workspace-schematic",
+        "dep-graph": "./node_modules/.bin/nx dep-graph",
+        "help": "./node_modules/.bin/nx help"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "6.1.4",
+        "@angular/common": "6.1.4",
+        "@angular/compiler": "6.1.4",
+        "@angular/core": "6.1.4",
+        "@angular/forms": "6.1.4",
+        "@angular/platform-browser": "6.1.4",
+        "@angular/platform-browser-dynamic": "6.1.4",
+        "@angular/router": "6.1.4",
+        "@ngrx/effects": "6.1.0",
+        "@ngrx/entity": "^6.1.0",
+        "@ngrx/router-store": "^6.1.0",
+        "@ngrx/store": "6.1.0",
+        "@ngrx/store-devtools": "6.1.0",
+        "@nrwl/nx": "6.2.1",
+        "core-js": "^2.5.4",
+        "ngrx-store-freeze": "0.2.4",
+        "rxjs": "6.2.2",
+        "rxjs-compat": "6.2.2",
+        "zone.js": "^0.8.26"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "~0.6.1",
+        "@angular-devkit/build-ng-packagr": "~0.6.1",
+        "@angular/cdk": "^6.4.6",
+        "@angular/cli": "6.1.5",
+        "@angular/compiler-cli": "6.1.4",
+        "@angular/flex-layout": "^6.0.0-beta.17",
+        "@angular/language-service": "6.1.4",
+        "@angular/material": "^6.4.6",
+        "@ngrx/schematics": "6.1.0",
+        "@nrwl/schematics": "6.2.1",
+        "@types/jasmine": "~2.8.6",
+        "@types/jasminewd2": "~2.0.3",
+        "@types/node": "~10.9.2",
+        "@types/node-hue-api": "^2.3.0",
+        "codelyzer": "~4.2.1",
+        "hammerjs": "^2.0.8",
+        "jasmine-core": "~2.99.1",
+        "jasmine-marbles": "0.3.1",
+        "jasmine-spec-reporter": "~4.2.1",
+        "karma": "~2.0.0",
+        "karma-chrome-launcher": "~2.2.0",
+        "karma-coverage-istanbul-reporter": "~1.4.2",
+        "karma-jasmine": "~1.1.0",
+        "karma-jasmine-html-reporter": "^0.2.2",
+        "ng-packagr": "^3.0.0-rc.2",
+        "ngrx-store-localstorage": "^5.0.1",
+        "prettier": "1.10.2",
+        "protractor": "~5.3.0",
+        "ts-node": "~5.0.1",
+        "tsickle": ">=0.25.5",
+        "tslib": "^1.7.1",
+        "tslint": "~5.9.1",
+        "typescript": "2.7.2"
+    }
 }
