--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -8,6 +8,13 @@
         "experimentalDecorators": true,
         "downlevelIteration": true,
         "target": "es5",
+        "strict": true,                           /* Enable all strict type-checking options. */
+        "noImplicitAny": true,                    /* Raise error on expressions and declarations with an implied 'any' type. */
+        "strictNullChecks": true,                 /* Enable strict null checks. */
+        "strictFunctionTypes": true,              /* Enable strict checking of function types. */
+        "strictPropertyInitialization": true,     /* Enable strict checking of property initialization in classes. */
+        "noImplicitThis": true,                   /* Raise error on 'this' expressions with an implied 'any' type. */
+        "alwaysStrict": true,                     /* Parse in strict mode and emit "use strict" for each source file. */
         "typeRoots": [
             "node_modules/@types"
         ],
