--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
         "test": "ng test",
         "lint": "./node_modules/.bin/nx lint && ng lint",
         "e2e": "ng e2e",
-        "xi18n": "ng xi18n --output-path locale --i18n-locale en --i18n-format xmb --out-file messages.xmb ",
+        "xi18n": "npm run ng-xi18n && npm run ngx-xi18n",
+        "ng-xi18n": "ng xi18n --output-path locale --i18n-locale en --i18n-format xmb --out-file messages.xmb",
+        "ngx-xi18n": "ngx-extractor -i apps/**/*.ts -i libs/**/*.ts -f xmb -o apps/huectl/locale/messages.xmb",
         "affected:apps": "./node_modules/.bin/nx affected:apps",
         "affected:build": "./node_modules/.bin/nx affected:build",
         "affected:e2e": "./node_modules/.bin/nx affected:e2e",
@@ -57,6 +59,7 @@
         "@angular/language-service": "6.1.4",
         "@angular/material": "^6.4.6",
         "@ngrx/schematics": "6.1.0",
+        "@ngx-translate/i18n-polyfill": "^1.0.0",
         "@nrwl/schematics": "6.2.1",
         "@types/jasmine": "~2.8.6",
         "@types/jasminewd2": "~2.0.3",
